--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.19.5",
     "bootstrap-material-design": "^4.1.3",
+    "firebase": "^9.6.11",
     "mdbreact": "^5.2.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
