--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-  "cSpell.words": ["AKILA", "appspot", "firebaseapp", "Geblt", "gjoal", "OCBII"]
+  "cSpell.words": [
+    "AKILA",
+    "appspot",
+    "firebaseapp",
+    "Geblt",
+    "gjoal",
+    "OCBII",
+    "Toastfy",
+    "toastify"
+  ]
 }
